--- a/4-6-8-CustomDatasetKWSModel.ipynb
+++ b/4-6-8-CustomDatasetKWSModel.ipynb
@@ -53,33 +53,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Important - Reverting to TF1 - Start\n",
-        "We need to install Tensorflow V1 in order to use the required features for Keyword Spotting. \n",
-        "\n",
-        "**Run the following cell and click \"restart runtime\" that appears once it completes.**\n",
-        "\n",
-        "**Do not rerun the previous cells after restarting the runtime.**"
-      ],
-      "metadata": {
-        "id": "W2Xne8hbyzT1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip uninstall tensorflow -y\n",
-        "!pip install tensorflow-gpu==1.15"
-      ],
-      "metadata": {
-        "id": "G43nVAIdy3uD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Important - Reverting to TF1 - End\n",
+        "### Important - Previous version of this reverted to TF1, may be compatibility issues \n",
         "\n",
         "**Make sure to click the \"RESTART RUNTIME\" button in the output of the previous cell. Then move onto the next cell!**"
       ],
@@ -91,7 +65,6 @@
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
-        "assert(tf.VERSION == \"1.15.0\") #Make sure you install Tensorflow 1.15.0 and restart the runtime or this will fail!\n",
         "# Now that the runtime is set import things!\n",
         "import sys\n",
         "# We add this path so we can import the speech processing modules.\n",
